[tool.poetry]
name = "botanim-bot"
version = "0.1.0"
description = ""
authors = ["Alexey Goloburdin <terrarium-a@yandex.ru>"]
readme = "README.md"
packages = [{include = "botanim_bot"}]

[tool.poetry.dependencies]
python = "^3.11"

python-telegram-bot = "21.3"
aiosqlite = "0.20.0"
python-dotenv = "1.0.1"
schulze = "0.1"
jinja2 = "3.1.4"

[tool.poetry.group.dev.dependencies]
ruff = "0.4.8"
pyright = "1.1.367"
black = "24.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
select = ["F", "E", "W", "C90",
          "I", "N", "S", "B", "A",
          "ISC", "T20", "Q", "PTH"]

ignore = ["A003"]

[tool.pyright]
reportUnnecessaryTypeIgnoreComment="warning"
